force-app/main/default/objects/AccountPremiseAssociation__c/AccountPremiseAssociation__c.object-meta.xml
<CustomObject>
    <description>This is a junction object to link Accounts with Premises</description>
    <label>AccountPremiseAssociation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AccountPremiseAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountPremiseAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>