force-app/main/default/objects/AccountPremiseAssociation__c/fields/Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Usage__c</fullName>
    <label>Annual Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>