force-app/main/default/objects/AccountPremiseAssociation__c/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This APA has received an async error and must be reviewed.</description>
    <inlineHelpText>This APA has received an async error and must be reviewed.</inlineHelpText>
    <label>Attention</label>
    <type>Checkbox</type>
</CustomField>