force-app/main/default/objects/AccountPremiseAssociation__c/fields/Average_Daily_Usage__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Usage__c</fullName>
    <label>Average Daily Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>