force-app/main/default/objects/AccountPremiseAssociation__c/fields/ContactID_Kludge__c.field-meta.xml
<CustomField>
    <fullName>ContactID_Kludge__c</fullName>
    <formula>Account__r.PersonContactId</formula>
    <label>ContactID Kludge</label>
    <type>Text</type>
</CustomField>