force-app/main/default/objects/AccountPremiseAssociation__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Email address for the customer who uses the premise (for workflow email purposes only)</description>
    <inlineHelpText>Email address for the customer who uses the premise (for workflow email purposes only)</inlineHelpText>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>