force-app/main/default/objects/AccountPremiseAssociation__c/fields/Customer_Selected_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Selected_Profile__c</fullName>
    <description>Which of the PUCT load curves the customer says they belong to</description>
    <inlineHelpText>Which of the PUCT load curves the customer says they belong to</inlineHelpText>
    <label>Customer-Selected Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>