force-app/main/default/objects/AccountPremiseAssociation__c/fields/Daily_Request_Completed__c.field-meta.xml
<CustomField>
    <fullName>Daily_Request_Completed__c</fullName>
    <label>Daily Request Completed</label>
    <type>DateTime</type>
</CustomField>