force-app/main/default/objects/AccountPremiseAssociation__c/fields/Daily_Request_Started_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Daily_Request_Started_Timestamp__c</fullName>
    <label>Daily Request Started Timestamp</label>
    <type>DateTime</type>
</CustomField>