force-app/main/default/objects/AccountPremiseAssociation__c/fields/lastDaily__c.field-meta.xml
<CustomField>
    <fullName>lastDaily__c</fullName>
    <label>lastDaily</label>
    <type>DateTime</type>
</CustomField>