force-app/main/default/objects/AccountPremiseAssociation__c/fields/lastMonthly__c.field-meta.xml
<CustomField>
    <fullName>lastMonthly__c</fullName>
    <label>lastMonthly</label>
    <type>Date</type>
</CustomField>