force-app/main/default/objects/AccountPremiseAssociation__c/fields/LOA_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>LOA_City_State_Zip__c</fullName>
    <description>City, State and Zip of the customer requesting the LOA</description>
    <label>LOA City, State, Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>