force-app/main/default/objects/AccountPremiseAssociation__c/fields/LOA_ESID__c.field-meta.xml
<CustomField>
    <fullName>LOA_ESID__c</fullName>
    <label>LOA ESID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>