force-app/main/default/objects/AccountPremiseAssociation__c/fields/LOA_Name__c.field-meta.xml
<CustomField>
    <fullName>LOA_Name__c</fullName>
    <description>Name of the customer requesting meter data</description>
    <inlineHelpText>Name of the customer requesting meter data</inlineHelpText>
    <label>LOA Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>