force-app/main/default/objects/AccountPremiseAssociation__c/fields/LOA_Phone__c.field-meta.xml
<CustomField>
    <fullName>LOA_Phone__c</fullName>
    <description>Phone number of the customer requesting the LOA</description>
    <inlineHelpText>Phone number of the customer requesting the LOA</inlineHelpText>
    <label>LOA Phone</label>
    <type>Phone</type>
</CustomField>