force-app/main/default/objects/AccountPremiseAssociation__c/fields/LOA_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>LOA_Service_Address__c</fullName>
    <description>Street number and name for the LOA request</description>
    <inlineHelpText>Street number and name for the LOA request</inlineHelpText>
    <label>LOA Service Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>