force-app/main/default/objects/AccountPremiseAssociation__c/fields/LOA_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>LOA_Street_Address__c</fullName>
    <description>Street address of the customer requesting the usage data</description>
    <inlineHelpText>Street address of the customer requesting the usage data</inlineHelpText>
    <label>LOA Street Address</label>
    <length>60</length>
    <type>Text</type>
</CustomField>