force-app/main/default/objects/AccountPremiseAssociation__c/fields/Meter_Data_Daily_Status__c.field-meta.xml
<CustomField>
    <fullName>Meter_Data_Daily_Status__c</fullName>
    <label>Meter_Data_Daily_Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>