force-app/main/default/objects/AccountPremiseAssociation__c/fields/Meter_Data_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Meter_Data_Estimated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meter Data Estimated</label>
    <type>Checkbox</type>
</CustomField>