force-app/main/default/objects/AccountPremiseAssociation__c/fields/Meter_Data_Permission__c.field-meta.xml
<CustomField>
    <fullName>Meter_Data_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The account has provided permission to retrieve data for this premise</description>
    <inlineHelpText>The account has provided permission to retrieve data for this premise</inlineHelpText>
    <label>Meter Data Permission</label>
    <type>Checkbox</type>
</CustomField>