force-app/main/default/objects/AccountPremiseAssociation__c/fields/Meter_Data_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Meter_Data_Request_Status__c</fullName>
    <label>Meter Data Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not requested</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error-Incomplete Data</fullName>
            </value>
            <value>
                <fullName>Error-Invalid Service Address</fullName>
            </value>
            <value>
                <fullName>Error-Invalid Meter/ESID Match</fullName>
            </value>
            <value>
                <fullName>Error-No REP of Record</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>