force-app/main/default/objects/AccountPremiseAssociation__c/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <description>For email templates</description>
    <formula>Premise__r.Meter_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For email templates</inlineHelpText>
    <label>Meter Number</label>
    <type>Text</type>
</CustomField>