force-app/main/default/objects/AccountPremiseAssociation__c/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <label>Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Well Owner</fullName>
            </value>
            <value>
                <fullName>Royalty Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>