force-app/main/default/objects/AccountPremiseAssociation__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <description>This is the premise that the account is related to</description>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Associated Accounts</relationshipLabel>
    <relationshipName>AccountPremiseAssociations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>