force-app/main/default/objects/AccountPremiseAssociation__c/fields/Premise_Address__c.field-meta.xml
<CustomField>
    <fullName>Premise_Address__c</fullName>
    <description>For email templates</description>
    <formula>Premise__r.Electric_Service_Address__c</formula>
    <inlineHelpText>For email templates</inlineHelpText>
    <label>Premise Address</label>
    <type>Text</type>
</CustomField>