force-app/main/default/objects/AccountPremiseAssociation__c/fields/Premise_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Premise_Record_Type__c</fullName>
    <formula>Premise__r.RecordTypeId</formula>
    <label>Premise Record Type</label>
    <type>Text</type>
</CustomField>