force-app/main/default/objects/AccountPremiseAssociation__c/fields/Public_Data__c.field-meta.xml
<CustomField>
    <fullName>Public_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer has elected to share their meter data in public</description>
    <inlineHelpText>Customer has elected to share their meter data in public</inlineHelpText>
    <label>Public Data</label>
    <type>Checkbox</type>
</CustomField>