force-app/main/default/objects/AccountPremiseAssociation__c/fields/REP_of_Record__c.field-meta.xml
<CustomField>
    <fullName>REP_of_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current REP for this premise.</description>
    <inlineHelpText>The current REP for this premise.</inlineHelpText>
    <label>REP of Record</label>
    <referenceTo>REP_Profile__c</referenceTo>
    <relationshipLabel>AccountPremiseAssociations</relationshipLabel>
    <relationshipName>AccountPremiseAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>