force-app/main/default/objects/AccountPremiseAssociation__c/fields/Request_Completed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Request_Completed_Timestamp__c</fullName>
    <description>When did the last UHIT request for this APA complete?</description>
    <inlineHelpText>When did the last UHIT request for this APA complete?</inlineHelpText>
    <label>Request Completed Timestamp</label>
    <type>DateTime</type>
</CustomField>