force-app/main/default/objects/AccountPremiseAssociation__c/fields/Request_Started_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Request_Started_Timestamp__c</fullName>
    <description>Shows when the most recent monthly usage summary request began</description>
    <inlineHelpText>Shows when the most recent monthly usage summary request began</inlineHelpText>
    <label>Request Started Timestamp</label>
    <type>DateTime</type>
</CustomField>