force-app/main/default/objects/AccountPremiseAssociation__c/fields/Safari_Dataload_ID__c.field-meta.xml
<CustomField>
    <fullName>Safari_Dataload_ID__c</fullName>
    <externalId>true</externalId>
    <label>Safari Dataload ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>