force-app/main/default/objects/AccountPremiseAssociation__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Account Premise Association is the one the customer has selected for current shopping.</description>
    <inlineHelpText>This Account Premise Association is the one the customer has selected for current shopping.</inlineHelpText>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>