force-app/main/default/objects/AccountPremiseAssociation__c/fields/SourceGas_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SourceGas_Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>SourceGas Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>