force-app/main/default/objects/AccountPremiseAssociation__c/fields/Stake_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Stake_Ownership__c</fullName>
    <description>What % Stake does this customer have for the well (premise)?</description>
    <inlineHelpText>What % Stake does this customer have for the well (premise)?</inlineHelpText>
    <label>% Stake Ownership</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>