force-app/main/default/objects/AccountPremiseAssociation__c/fields/TDSP__c.field-meta.xml
<CustomField>
    <fullName>TDSP__c</fullName>
    <formula>Premise__r.TDSP_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TDSP</label>
    <type>Text</type>
</CustomField>