force-app/main/default/objects/AccountPremiseAssociation__c/fields/TOU_Profile_Complete__c.field-meta.xml
<CustomField>
    <fullName>TOU_Profile_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>there&#39;s an attachment in place that contains the TOU profile for this customer</description>
    <inlineHelpText>there&#39;s an attachment in place that contains the TOU profile for this customer</inlineHelpText>
    <label>TOU Profile Complete</label>
    <type>Checkbox</type>
</CustomField>