force-app/main/default/objects/AccountPremiseAssociation__c/fields/UHIT_Interval_Request_Duration__c.field-meta.xml
<CustomField>
    <fullName>UHIT_Interval_Request_Duration__c</fullName>
    <description>how long, in minutes, is the most recent daily request taking?</description>
    <formula>if(NOT(ispickval(  Meter_Data_Daily_Status__c , &quot;In Progress&quot; )), 
( Daily_Request_Completed__c  -  Daily_Request_Started_Timestamp__c )*24*60, 
(Now()- Daily_Request_Started_Timestamp__c )*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>how long, in minutes, is the most recent daily request taking?</inlineHelpText>
    <label>UHIT Interval Request Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>