force-app/main/default/objects/AccountPremiseAssociation__c/fields/UHIT_request_duration__c.field-meta.xml
<CustomField>
    <fullName>UHIT_request_duration__c</fullName>
    <description>How long the UHIT request took/has taken, in minutes</description>
    <formula>if(NOT(ispickval(  Meter_Data_Daily_Status__c , &quot;In Progress&quot; )), 
(Request_Completed_Timestamp__c  - Request_Started_Timestamp__c )*24*60, 
(Now()- Request_Started_Timestamp__c )*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How long the UHIT request took/has taken, in minutes</inlineHelpText>
    <label>UHIT request duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>