force-app/main/default/objects/AccountPremiseAssociation__c/fields/X50KVA__c.field-meta.xml
<CustomField>
    <fullName>X50KVA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This premise is is commercial.</description>
    <inlineHelpText>This premise is is commercial.</inlineHelpText>
    <label>&gt;50KVA</label>
    <type>Checkbox</type>
</CustomField>