force-app/main/default/objects/AccountPremiseAssociation__c/listViews/Created_This_Week.listView-meta.xml
<ListView>
    <fullName>Created_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Premise__c</columns>
    <columns>Meter_Data_Request_Status__c</columns>
    <columns>Meter_Data_Permission__c</columns>
    <columns>TDSP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Created This Week</label>
    <language>en_US</language>
</ListView>