force-app/main/default/objects/AccountPremiseAssociation__c/listViews/Meter_Data_Errors.listView-meta.xml
<ListView>
    <fullName>Meter_Data_Errors</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Premise__c</columns>
    <columns>Meter_Data_Request_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Meter_Data_Request_Status__c</field>
        <operation>contains</operation>
        <value>Error-</value>
    </filters>
    <label>Meter Data Errors</label>
</ListView>