force-app/main/default/objects/AccountPremiseAssociation__c/listViews/Non_CEHE_Meter.listView-meta.xml
<ListView>
    <fullName>Non_CEHE_Meter</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Premise__c</columns>
    <columns>Meter_Data_Request_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TDSP__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TDSP__c</field>
        <operation>notContain</operation>
        <value>centerpoint,none</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>TDSP__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Meter_Data_Request_Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Meter_Data_Estimated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Non-CEHE with Meter Data</label>
    <language>en_US</language>
</ListView>